--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: "JDG — ИП в Польше"
-site_url: https://sobolevbel.github.io
+site_url: https://sobolevbel.github.io/jdg/
 theme:
   name: readthedocs
 
