Add section to the menu

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ nav:
   - Profil Zaufany: pz.md
   - Регистрация JDG: registration.md
   - ZUS: zus.md
+  - Переход на Obniżone składki ZUS: zus_obnizone_skladki.md
   - Налоги: taxes.md
   - Декларации: declarations.md
   - Легализация: legalization.md
