--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
-      - run: pip install mkdocs
+      - run: pip install mkdocs==1.2.3
       - run: mkdocs build --verbose
       - if: github.ref == 'refs/heads/master'
         run: mkdocs gh-deploy --force
