--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,5 +17,6 @@ nav:
   - Декларации: declarations.md
   - Легализация: legalization.md
   - Польский лад: polski_lad.md
+  - Рабочий процесс: workflow.md
   - F.A.Q.: faq.md
 
