add workaround for siiami

--- a/.github/workflows/markdown_link_check_config.json
+++ b/.github/workflows/markdown_link_check_config.json
@@ -1,7 +1,7 @@
 {
   "httpHeaders": [
     {
-      "urls": ["https://docs.github.com/"],
+      "urls": ["https://docs.github.com/", "https://siiami.pl/"],
       "headers": {
         "Accept-Encoding": "zstd, br, gzip, deflate"
       }
