--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,4 +19,5 @@ nav:
   - Польский лад: polski_lad.md
   - Рабочий процесс: workflow.md
   - F.A.Q.: faq.md
+  - Рутинные операции (на примере infakt.pl): infakt_routine.md
 
