ready to publish

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,4 +18,5 @@ nav:
   - Легализация: legalization.md
   - Польский лад: polski_lad.md
   - F.A.Q.: faq.md
+  - Рутинные операции (на примере infakt.pl): infakt_routine.md
 
