--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,9 +2,7 @@ site_name: "JDG — ИП в Польше"
 site_description: "Гайд по регистрации и ведению JDG (ИП) в Польше"
 site_url: https://sobolevbel.github.io/jdg/
 repo_url: https://github.com/sobolevbel/jdg
-
-theme:
-  name: readthedocs
+repo_name: sobolevbel/jdg
 
 nav:
   - Главная: index.md
@@ -21,6 +19,50 @@ nav:
   - F.A.Q.: faq.md
   - Что нового: whatsnew.md
 
+theme:
+  name: material
+  accent: indigo
+  icon:
+    repo: fontawesome/brands/github
+    edit: material/pencil
+  edit_uri: edit/master/docs/
+  palette:
+    # Palette toggle for light mode
+    - scheme: default
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
+
+plugins:
+  - search
+  - git-revision-date-localized
+
 markdown_extensions:
   - toc:
-        permalink: 
+      permalink: 
+
+extra:
+  analytics:
+    provider: google
+    property: G-65Z83YVGT1
+  consent:
+    title: Cookie consent
+    description: >-
+      We use cookies to recognize your repeated visits and preferences, as well
+      as to measure the effectiveness of our documentation and whether users
+      find what they're searching for. With your consent, you're helping us to
+      make our documentation better.
+    actions:
+      - accept
+      - manage
+      - reject
+
+copyright: >
+  Copyright &copy; 2021 - 2022 Yauheni Sobaleu –
+  <a href="#__consent">Change cookie settings</a>
