--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,29 @@
-click==8.0.4
-ghp-import==2.0.2
-importlib-metadata==4.11.3
-Jinja2==3.0.3
-Markdown==3.3.6
+Babel==2.10.3
+certifi==2022.9.24
+charset-normalizer==2.1.1
+click==8.1.3
+ghp-import==2.1.0
+gitdb==4.0.9
+GitPython==3.1.29
+idna==3.4
+Jinja2==3.1.2
+Markdown==3.3.7
 MarkupSafe==2.1.1
 mergedeep==1.3.4
-mkdocs==1.2.3
+mkdocs==1.4.0
+mkdocs-git-revision-date-localized-plugin==1.1.0
+mkdocs-material==8.5.6
+mkdocs-material-extensions==1.0.3
 packaging==21.3
-pyparsing==3.0.7
+Pygments==2.13.0
+pymdown-extensions==9.6
+pyparsing==3.0.9
 python-dateutil==2.8.2
+pytz==2022.4
 PyYAML==6.0
 pyyaml_env_tag==0.1
+requests==2.28.1
 six==1.16.0
-watchdog==2.1.6
-zipp==3.7.0
+smmap==5.0.0
+urllib3==1.26.12
+watchdog==2.1.9
