--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,6 +58,7 @@ markdown_extensions:
         custom_icons:
           - overrides/.icons
   - toc:
+      slugify: !!python/object/apply:pymdownx.slugs.slugify { kwds: { case: lower } }
       permalink: ¶
 
 extra:
