--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,6 @@ jobs:
         with:
           python-version: 3.x
       - run: pip install -r requirements.txt
-      - run: mkdocs build --verbose
+      - run: python -m mkdocs build --verbose
       - if: github.ref == 'refs/heads/master'
-        run: mkdocs gh-deploy --force
+        run: python -m mkdocs gh-deploy --force
