--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,4 +11,4 @@ services:
     - type: bind
       source: ./mkdocs.yml
       target: /mkdocs.yml
-    command: ["mkdocs", "serve"]
+    command: ["python", "-m", "mkdocs", "serve"]
