--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+awesome-slugify==1.6.5
 Babel==2.10.3
 certifi==2023.5.7
 charset-normalizer==2.1.1
 click==8.1.3
+colorama==0.4.6
 ghp-import==2.1.0
 gitdb==4.0.9
 GitPython==3.1.31
@@ -11,7 +13,7 @@ Markdown==3.3.7
 MarkupSafe==2.1.1
 mergedeep==1.3.4
 mkdocs==1.4.3
-mkdocs-git-revision-date-localized-plugin==1.1.0
+mkdocs-git-revision-date-localized-plugin==1.2.0
 mkdocs-material==9.1.17
 mkdocs-material-extensions==1.1.1
 packaging==21.3
@@ -22,8 +24,10 @@ python-dateutil==2.8.2
 pytz==2022.4
 PyYAML==6.0
 pyyaml_env_tag==0.1
+regex==2023.6.3
 requests==2.31.0
 six==1.16.0
 smmap==5.0.0
+Unidecode==0.4.21
 urllib3==1.26.12
 watchdog==2.1.9
