Use unicode slugs as links (#146)
* Use unicode slugs as links.

* Configure latin slugs for headers links.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,6 +58,7 @@ markdown_extensions:
         custom_icons:
           - overrides/.icons
   - toc:
+      slugify: !!python/name:slugify_headers.slugify
       permalink: ¶
 
 extra:
