Rename infakt tab.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,7 @@ nav:
   - Декларации: declarations.md
   - Легализация: legalization.md
   - Рабочий процесс: workflow.md
-  - Рутинные операции в infakt.pl: infakt_routine.md
+  - Ежемесячные операции в infakt.pl: infakt_routine.md
   - F.A.Q.: faq.md
   - Что нового: whatsnew.md
   - ♥&nbsp;Поддержать: support.md
