--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.x
+          python-version: 3.11
       - run: pip install -r requirements.txt
       - run: python -m mkdocs build --verbose
       - if: github.ref == 'refs/heads/master'
