--- a/requirements.txt
+++ b/requirements.txt
@@ -12,13 +12,16 @@ Jinja2==3.1.2
 Markdown==3.3.7
 MarkupSafe==2.1.1
 mergedeep==1.3.4
-mkdocs==1.4.3
-mkdocs-git-revision-date-localized-plugin==1.2.0
-mkdocs-material==9.1.17
-mkdocs-material-extensions==1.1.1
+mkdocs==1.5.3
+mkdocs-git-revision-date-localized-plugin==1.2.1
+mkdocs-material==9.4.8
+mkdocs-material-extensions==1.3
 packaging==21.3
-Pygments==2.15.1
-pymdown-extensions==10.0.1
+paginate==0.5.6
+pathspec==0.11.2
+platformdirs==4.0.0
+Pygments==2.16.1
+pymdown-extensions==10.4
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.4
