--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,7 @@ nav:
   - Profil Zaufany: pz.md
   - Регистрация JDG и VAT: registration.md
   - ZUS: zus.md
-  - Переход на Obniżone składki ZUS: zus_obnizone_skladki.md
+  - Переход на Składki Preferencyjne и Duży ZUS: zus_obnizone_skladki.md
   - Налоги: taxes.md
   - Декларации: declarations.md
   - Легализация: legalization.md
