--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,9 @@ certifi==2023.5.7
 charset-normalizer==2.1.1
     # via requests
 click==8.1.3
-    # via mkdocs
+    # via
+    #   -r requirements.in
+    #   mkdocs
 colorama==0.4.6
     # via mkdocs-material
 ghp-import==2.1.0
@@ -71,8 +73,9 @@ pytz==2022.4
     # via
     #   babel
     #   mkdocs-git-revision-date-localized-plugin
-pyyaml==6.0
+pyyaml==6.0.1
     # via
+    #   -r requirements.in
     #   mkdocs
     #   pymdown-extensions
     #   pyyaml-env-tag
