--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,10 +64,6 @@ markdown_extensions:
 extra:
   homepage: https://sobolevbel.github.io/jdg/
 
-  analytics:
-    provider: google
-    property: G-65Z83YVGT1
-
   consent:
     title: Cookie consent
     description: >-
@@ -83,3 +79,7 @@ copyright: <a href="#__consent">Change cookie settings</a>
 
 extra_css:
   - css/extra.css
+
+extra_javascript:
+  - https://www.googletagmanager.com/gtag/js?id=G-65Z83YVGT1
+  - javascript/extra.js
