--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
   - Регистрация JDG и VAT: registration.md
   - ZUS: zus.md
   - Переход на Składki Preferencyjne и Duży ZUS: zus_obnizone_skladki.md
+  - ZUS-Каникулы: zus_vacation.md
   - Налоги: taxes.md
   - Декларации: declarations.md
   - Легализация: legalization.md
