--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,6 +61,9 @@ markdown_extensions:
   - toc:
       slugify: !!python/name:slugify_headers.slugify
       permalink: ¶
+  - def_list
+  - pymdownx.tasklist:
+      custom_checkbox: true
 
 extra:
   homepage: https://sobolevbel.github.io/jdg/
