create a separate page for the 'pismo ogolne do urzedu skarbowego'

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,7 @@ nav:
   - Декларации: declarations.md
   - Легализация: legalization.md
   - Рабочий процесс: workflow.md
+  - Как отправить письмо в налоговую: pismo_ogolne.md
   - Ежемесячные операции в infakt.pl: infakt_routine.md
   - F.A.Q.: faq.md
   - Что нового: whatsnew.md
