--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
   - Рабочий процесс: workflow.md
   - Как отправить письмо в налоговую: pismo_ogolne.md
   - Ежемесячные операции в infakt.pl: infakt_routine.md
+  - Словарь: glossary.md
   - F.A.Q.: faq.md
   - Что нового: whatsnew.md
   - ♥&nbsp;Поддержать: support.md
