--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,10 +8,14 @@ nav:
   - Главная: index.md
   - PESEL: pesel.md
   - Profil Zaufany: pz.md
-  - Регистрация JDG и VAT: registration.md
-  - ZUS: zus.md
-  - Переход на Składki Preferencyjne и Duży ZUS: zus_obnizone_skladki.md
-  - ZUS-Каникулы: zus_vacation.md
+  - Регистрация:    # section
+    - Регистрация JDG: registration_jdg.md
+    - Регистрация VAT: registration_vat.md
+    - Регистрация VAT-UE: registration_vat_ue.md
+  - ZUS:    # section
+    - ZUS: zus.md
+    - Переход на Składki Preferencyjne и Duży ZUS: zus_obnizone_skladki.md
+    - ZUS-Каникулы: zus_vacation.md
   - Налоги: taxes.md
   - Декларации: declarations.md
   - Легализация: legalization.md
@@ -29,6 +33,7 @@ theme:
   accent: indigo
   features:
     - navigation.top
+    - navigation.expand   # expand sections in nav menu
   icon:
     repo: fontawesome/brands/github
     edit: material/pencil
@@ -54,6 +59,10 @@ plugins:
   - git-revision-date-localized
 
 markdown_extensions:
+  - attr_list     # for Buttons
+  - admonition    # for Admonitions, also known as call-outs,
+  - pymdownx.details    # for Admonitions, also known as call-outs,
+  - pymdownx.superfences    # for Admonitions, also known as call-outs,
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
