- Add instruction "Переход на Składki Preferencyjne и Duży ZUS"

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,8 @@ nav:
   - Profil Zaufany: pz.md
   - Регистрация JDG и VAT: registration.md
   - ZUS: zus.md
-  - Переход на Składki Preferencyjne и Duży ZUS: zus_obnizone_skladki.md
+  - Переход на Składki Preferencyjne: zus_obnizone_skladki.md
+  - Переход на Składki Preferencyjne и Duży ZUS: zus_duzy.md
   - ZUS-Каникулы: zus_vacation.md
   - Налоги: taxes.md
   - Декларации: declarations.md
