--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@
 #
 #    pip-compile requirements.in
 #
-awesome-slugify==1.6.5
+#awesome-slugify==1.6.5
     # via -r requirements.in
 babel==2.16.0
     # via
@@ -57,6 +57,7 @@ mkdocs-material==9.5.36
     # via -r requirements.in
 mkdocs-material-extensions==1.3.1
     # via mkdocs-material
+mkdocs-redirects
 packaging==24.1
     # via mkdocs
 paginate==0.5.7
@@ -71,6 +72,7 @@ pymdown-extensions==10.10.1
     # via mkdocs-material
 python-dateutil==2.9.0.post0
     # via ghp-import
+python-slugify
 pytz==2024.2
     # via mkdocs-git-revision-date-localized-plugin
 pyyaml==6.0.2
@@ -92,7 +94,7 @@ six==1.16.0
     # via python-dateutil
 smmap==5.0.1
     # via gitdb
-unidecode==0.4.21
+#unidecode==0.4.21
     # via awesome-slugify
 urllib3==2.2.3
     # via requests
