--- a/.github/workflows/markdown_linter_checks.yml
+++ b/.github/workflows/markdown_linter_checks.yml
@@ -20,7 +20,14 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: "3.1"
-      - name: Install mdl
-        run: gem install mdl
+
+      - name: Clone markdownlint repository
+        run: git clone https://github.com/markdownlint/markdownlint
+
+      - name: Install markdownlint using rake
+        run: |
+          cd markdownlint
+          rake install
+
       - name: Run markdown-linter
         run: mdl -s .github/workflows/markdown_linter_rules.rb docs/.
