Update ZUS documentation: refine sections on Duży ZUS and Składki Preferencyjne, add detailed transition steps, and improve navigation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,7 @@ nav:
     - Переход на следующий режим: zus_next_level.md
     - Льгота Ulga na Start: zus_ulga_na_start.md
     - Переход на Składki Preferencyjne: zus_obnizone_skladki.md
-    - Переход на Składki Preferencyjne и Duży ZUS: zus_duzy.md
+    - Переход на Duży ZUS: zus_duzy.md
     - ZUS-Каникулы: zus_vacation.md
   - Налоги: taxes.md
   - Декларации: declarations.md
