Add ZUS error screenshots and documentation for common issues; add ZUS contact information

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
     - Льгота Ulga na Start: zus_ulga_na_start.md
     - Переход на Składki Preferencyjne: zus_obnizone_skladki.md
     - Переход на Duży ZUS: zus_duzy.md
+    - Ошибки ZUS: zus_errors.md
     - ZUS-Каникулы: zus_vacation.md
   - Налоги: taxes.md
   - Декларации: declarations.md
