--- a/mlc_config.json
+++ b/mlc_config.json
@@ -17,7 +17,7 @@
       "pattern": "^https://.*\\.infakt\\.pl"
     },
     {
-      "pattern": "^https://inpol.mazowieckie.pl"
+      "pattern": "^https://.*mazowieckie.pl"
     },
     {
       "pattern": "^https://pio-przybysz.duw.pl"
