Update ZUS documentation: improve navigation; refine contact information

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,7 @@ nav:
     - Переход на Duży ZUS: zus_duzy.md
     - Ошибки ZUS: zus_errors.md
     - ZUS-Каникулы: zus_vacation.md
+    - Контакты: zus_contact.md
   - Налоги: taxes.md
   - Декларации: declarations.md
   - Легализация: legalization.md
